Bug 89391 - systemd-journal-remote issues with multiline
Summary: systemd-journal-remote issues with multiline
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-02 11:45 UTC by Sebastian Schindler
Modified: 2015-03-02 16:07 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
minimal example for the bug (2.00 KB, text/plain)
2015-03-02 11:45 UTC, Sebastian Schindler
Details

Description Sebastian Schindler 2015-03-02 11:45:27 UTC
Created attachment 113916 [details]
minimal example for the bug

systemd-journal-remote seems to have an issue with multiline messages.

I tried to forward some messages that included fields with multiple lines and the resulting journal didn't look as expected.
The logs were printed up to the field which contained a multiline "message" and then nothing is printed.

I attached a .txt document that should help to reproduce the error.
Comment 1 Zbigniew Jedrzejewski-Szmek 2015-03-02 16:07:06 UTC
Fixed in http://cgit.freedesktop.org/systemd/systemd/commit/?id=09d801a82a.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.